[gd_scene load_steps=6 format=3 uid="uid://c8fmrn1o8k05f"]

[ext_resource type="Script" path="res://script/main_menu.gd" id="1_47lo5"]
[ext_resource type="Texture2D" uid="uid://cmdi26aqg18uq" path="res://assets/art/board_background.jpg" id="2_53gn0"]
[ext_resource type="AudioStream" uid="uid://bs0la4sqs52t2" path="res://assets/audio/capture.mp3" id="3_2l0pv"]
[ext_resource type="AudioStream" uid="uid://fp7lpgk3ffj2" path="res://assets/audio/move-self.mp3" id="4_2xr6b"]
[ext_resource type="AudioStream" uid="uid://dt1eag7bkcliy" path="res://assets/audio/illegal.mp3" id="4_3cpnn"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_47lo5")

[node name="move_vfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2xr6b")
volume_db = -16.947
bus = &"vfx"

[node name="place_vfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2l0pv")
volume_db = -16.947
bus = &"vfx"

[node name="error_vfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3cpnn")
bus = &"vfx"

[node name="back" type="TextureRect" parent="."]
modulate = Color(0.870588, 0.870588, 0.870588, 0.937255)
offset_left = -2399.0
offset_top = -3252.0
offset_right = 10605.0
offset_bottom = 4830.0
scale = Vector2(0.3, 0.6)
texture = ExtResource("2_53gn0")
stretch_mode = 1

[node name="container" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -395.5
offset_top = -363.5
offset_right = 395.5
offset_bottom = 363.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="main_title" type="Label" parent="container"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "digital writers board"

[node name="Label" type="Label" parent="container"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "base on the \"save the cat\" book"

[node name="working_stuff" type="VBoxContainer" parent="container"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3

[node name="space0" type="HSeparator" parent="container/working_stuff"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 10

[node name="NEW BOARD" type="Button" parent="container/working_stuff"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_font_sizes/font_size = 30
text = "NEW BOARD"

[node name="space1" type="HSeparator" parent="container/working_stuff"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 10

[node name="LOAD BOARD" type="Button" parent="container/working_stuff"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_font_sizes/font_size = 30
text = "LOAD BOARD
"

[node name="loader" type="HBoxContainer" parent="container/working_stuff"]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="path" type="LineEdit" parent="container/working_stuff/loader"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
placeholder_text = "paste the save file name"

[node name="space" type="VSeparator" parent="container/working_stuff/loader"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="load" type="Button" parent="container/working_stuff/loader"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "LOAD"

[node name="space2" type="HSeparator" parent="container/working_stuff"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 10

[node name="EXIT" type="Button" parent="container/working_stuff"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_font_sizes/font_size = 30
text = "EXIT
"

[node name="space3" type="HSeparator" parent="container/working_stuff"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 10

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="mouse_entered" from="container/working_stuff/NEW BOARD" to="." method="_on_new_board_mouse_entered"]
[connection signal="pressed" from="container/working_stuff/NEW BOARD" to="." method="_on_new_board_pressed"]
[connection signal="mouse_entered" from="container/working_stuff/LOAD BOARD" to="." method="_on_load_board_mouse_entered"]
[connection signal="pressed" from="container/working_stuff/LOAD BOARD" to="." method="_on_load_board_pressed"]
[connection signal="mouse_entered" from="container/working_stuff/loader/load" to="." method="_on_load_mouse_entered"]
[connection signal="pressed" from="container/working_stuff/loader/load" to="." method="_on_load_pressed"]
[connection signal="mouse_entered" from="container/working_stuff/EXIT" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="container/working_stuff/EXIT" to="." method="_on_exit_pressed"]
